--- a/Code/进阶篇/2.并查集new/汇总.md
+++ b/Code/进阶篇/2.并查集new/汇总.md
@@ -1,3 +1,75 @@
+## 前言
+并查集是合并集合的方式，对于一些关联性的集合，合并查询的方式可以使得题目分类处理，是一种题型的解决方案，这里最关键是构思好集合之间的关联关系；
+
+在这一 part 中，仅仅只是对部分题做了了解学习，远远没有达到可以手撕的程度，但是面试过程中遇到的并不算特别多，所以属于一个了解补充的 part，大家可以学习学习，还是挺有意思的；
+
+下一 part 做`分治法`
+
+
+引流一下 
+
+[刷完这 18 道贪心，妈妈再也不用担心我看到贪心就害怕了！](https://juejin.cn/post/7013926358107553806)
+
+[刷完这 15 道回溯，就可以无脑暴力手撕前端面试了](https://juejin.cn/post/7010321663912837151)
+
+[刷完这些双指针题，就可以手撕前端面试了](https://juejin.cn/post/7007969268222558215)
+
+[刷完这 12 道滑动窗口，就可以手撕前端面试了](https://juejin.cn/post/7005746866381914125)
+
+[刷完这 20 道二分题，可能还是手撕不了大厂面试](https://juejin.cn/post/6999053946807386119)
+
+[刷完这几道堆题，可能还是手撕不了大厂面试](https://juejin.cn/post/6990532472279105572/)
+
+[刷完这 30 道树题，可能还是手撕不了大厂面试](https://juejin.cn/post/6993955773218816008)
+
+[刷完这 20 道链表题，可能还是手撕不了大厂面试](https://juejin.cn/post/6996127305919627277) 
+
+[刷完这 15 道 dp 题，只能碰运气押题进大厂了](https://juejin.cn/post/7001862751454756894) 
+
+[刷完这几道位运算，等等再考虑手撕大厂面试吧 -- 没通过审核，后面改了之后再搞](https://juejin.cn/post/7001862751454756894)
+
+## 正文
+
+这是一篇水文，国庆回家也就坚持每天做一丢丢题目，然后保持一下手感，而并查集确实比较好的锻炼一下脑子，脑子不够转不过来，所以可以尝试学习并做一下，他的基本模板不会很复杂，基本如下：
+
+```javascript
+ class UnionFind {
+    constructor(n){
+        // 缓存两个数组，父节点数组和当前节点的子节点数量数组
+        // 1. 初始化的父节点数组都是指向自己当前的下标的； -- 其中下标是唯一值
+        this.parents = new Array(n).fill(1).map((_,index) => index)
+        // 2. 初始化的子节点数量数组都是只有一个；-- 其中下标是唯一值
+        this.sizes = new Array(n).fill(1) // 
+    }
+
+    // 寻找 x 的根节点
+    find(x){
+        if(this.parents[x] === x) return x
+        return this.find(this.parents[x])
+    }
+
+    // 合并两个并查集
+    connect(x,y){
+        const px = this.find(x)
+        const py = this.find(y)
+        if(px === py) return // 如果他们是一个集合，则直接返回
+        if(this.sizes[px]>this.sizes[py]){
+            // px 挂的节点更多，所以将 py 也挂过来
+             this.parents[py] =px
+             this.sizes[px]++
+        }else{
+            this.parents[px] =py
+             this.sizes[py]++ 
+        }
+    }
+}
+```
+
+当然，具体问题上，可能可以简化或者强化 connect 方法，来解决具体的问题，这就需要同学自己去学习探讨了；
+
+最后将几道例题奉上，节日结束，继续搬砖吧；
+
+## 题目
 ### [547. 省份数量](https://leetcode-cn.com/problems/number-of-provinces/)
 分析
 1. 每一个城市都有可能是一个省份，而只有是连接的城市，就合并为一个省份，最后剩下的集合就是省份
